--- a/Public S3 Bucket.yaml
+++ b/Public S3 Bucket.yaml
@@ -5,5 +5,5 @@ Resources:
     DeletionPolicy: Retain
     Properties:
      #Bucket name has to be unique in S3
-     BucketName: vs2020s3bucket
+     BucketName: publics3bucketvs2020
      AccessControl: PublicRead
