--- a/Simple EC2 Instance.yaml
+++ b/Simple EC2 Instance.yaml
@@ -3,6 +3,8 @@ Resources:
   MyInstance:
     Type: AWS::EC2::Instance
     Properties:
-      AvailabilityZone: us-east-1a
+      AvailabilityZone: us-east-1d
       ImageId: ami-a4c7edb2
       InstanceType: t2.micro
+      #Add your subnet ID name
+      SubnetId:
