--- a/EC2, EIP and Security Groups.yaml
+++ b/EC2, EIP and Security Groups.yaml
@@ -4,9 +4,9 @@ Resources:
     # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-instance.html
     Type: AWS::EC2::Instance
     Properties:
-      AvailabilityZone: us-east-1a
-      ImageId: ami-a4c7edb2
-      InstanceType: t2.nano
+      AvailabilityZone: us-west-1a
+      ImageId: ami-09a7fe78668f1e2c0
+      InstanceType: t2.micro
       SecurityGroups:
         - !Ref SSHSecurityGroup
         - !Ref ServerSecurityGroup
